--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
  SPDX-License-Identifier: Apache-2.0
 -->
 <html>
-  <head>
-    <title>Simple ThreeJS Overlay View</title>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script type="module" src="./index.ts"></script>
-  </head>
-  <body>
-    <div id="map" class="map"></div>
+<head>
+  <title>Simple ThreeJS Overlay View</title>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-    <!-- 
+  <link rel="stylesheet" type="text/css" href="./style.css" />
+  <script type="module" src="./index.ts"></script>
+</head>
+
+<body>
+  <div id="map" class="map"></div>
+  <div class="presentation-container">
+    <!-- <img src="" alt="presentacion" id="presentation"> -->
+    <img src="" alt="presentacion" id="presentation">
+  </div>
+
+  <!-- 
      The `defer` attribute causes the callback to execute after the full HTML
      document has been parsed. For non-blocking uses, avoiding race conditions,
      and consistent behavior across browsers, consider loading using Promises
      with https://www.npmjs.com/package/@googlemaps/js-api-loader.
     -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=beta"
-      defer
-    ></script>
-  </body>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJblBnBJaO7k0Ynlb5eXrkLya9URDHL64&callback=initMap&v=beta"
+    defer></script>
+</body>
+
 </html>
